// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderers:Action [actionType = "link"] show active class 1`] = `
<button
  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default a"
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action [actionType = "link"] show active class 2`] = `
<button
  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default a is-active"
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action MenuItem changes class when actived & disabled 1`] = `
<a
  class="a"
>
  <span>
    123
  </span>
</a>
`;

exports[`Renderers:Action MenuItem changes class when actived & disabled 2`] = `
<a
  class="a is-active"
>
  <span>
    233
  </span>
</a>
`;

exports[`Renderers:Action MenuItem changes class when actived & disabled 3`] = `
<a
  class="a is-active"
  disabled=""
>
  <span>
    233
  </span>
</a>
`;

exports[`Renderers:Action MenuItem display icon 1`] = `
<a
  class="a"
>
  <span>
    123
  </span>
</a>
`;

exports[`Renderers:Action MenuItem display icon 2`] = `
<a
  class="a"
>
  <i
    class="fa fa-cloud __PRISMUI_COMPONENT_CLASS_PREFIX__Button-icon fa fa-cloud"
  />
  <span>
    123
  </span>
</a>
`;

exports[`Renderers:Action all levels 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              按钮 link
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              按钮 primary
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--secondary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              按钮 secondary
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--info __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              按钮 info
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--success __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              按钮 success
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--warning __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              按钮 warning
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--danger __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              按钮 danger
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--light __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              按钮 light
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--dark __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              按钮 dark
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              按钮 default
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Divider __PRISMUI_COMPONENT_CLASS_PREFIX__Divider--solid __PRISMUI_COMPONENT_CLASS_PREFIX__Divider--horizontal"
          />
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default is-disabled"
            disabled=""
          >
            <span>
              按钮link
            </span>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default is-disabled"
            disabled=""
          >
            <span>
              按钮primary
            </span>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--secondary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default is-disabled"
            disabled=""
          >
            <span>
              按钮secondary
            </span>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--info __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default is-disabled"
            disabled=""
          >
            <span>
              按钮info
            </span>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--success __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default is-disabled"
            disabled=""
          >
            <span>
              按钮success
            </span>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--warning __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default is-disabled"
            disabled=""
          >
            <span>
              按钮warning
            </span>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--danger __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default is-disabled"
            disabled=""
          >
            <span>
              按钮danger
            </span>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--light __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default is-disabled"
            disabled=""
          >
            <span>
              按钮light
            </span>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--dark __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default is-disabled"
            disabled=""
          >
            <span>
              按钮dark
            </span>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default is-disabled"
            disabled=""
          >
            <span>
              按钮default
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderers:Action as container 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Action"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ColorField"
    >
      <i
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ColorField-previewIcon"
        style="background-color: rgb(16, 140, 238);"
      />
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ColorField-value"
      >
        #108cee
      </span>
    </div>
  </div>
</div>
`;

exports[`Renderers:Action custom activeClass 1`] = `
<button
  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default a"
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action custom activeClass 2`] = `
<button
  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default a custom-active"
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action display size[xs, sm, md, lg] 1`] = `
<button
  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-xs"
  type="button"
/>
`;

exports[`Renderers:Action display size[xs, sm, md, lg] 2`] = `
<button
  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
  type="button"
/>
`;

exports[`Renderers:Action display size[xs, sm, md, lg] 3`] = `
<button
  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-md"
  type="button"
/>
`;

exports[`Renderers:Action display size[xs, sm, md, lg] 4`] = `
<button
  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-lg"
  type="button"
/>
`;

exports[`Renderers:Action download shortcut 1`] = `
<button
  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action tooltip 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              top
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              bottom
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              left
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              right
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderers:Action with confirmText & actionType ajax 1`] = `
<body
  class="is-modalOpened"
  style="width: calc(100% - 0px);"
>
  <div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
      data-prismui-theme="cxd"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
            role="page-body"
          >
            <button
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
              type="button"
            >
              <span>
                ajax请求
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    class="prismui-dialog-widget __PRISMUI_COMPONENT_CLASS_PREFIX__Modal __PRISMUI_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-prismui-theme="cxd"
    role="dialog"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-overlay in"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-content in"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-header"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-title"
        >
          系统消息
        </div>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-body"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Html"
        >
          确认要发出这个请求？
        </span>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Modal-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          取消
        </button>
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--danger __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          确认
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renderers:Action with disabledTip 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default is-disabled"
            disabled=""
          >
            <span>
              弹框
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
